@@ -11,6 +11,7 @@ import static org.junit.Assert.assertFalse;
 import static org.junit.Assert.assertTrue;
 
 import java.util.Arrays;
+import java.util.List;
 
 import org.eclipse.rdf4j.model.vocabulary.FOAF;
 import org.eclipse.rdf4j.query.MalformedQueryException;
@@ -31,11 +32,11 @@ public class HTTPSparqlUpdateTest extends SPARQLUpdateTest {
 
 	private static SPARQLEmbeddedServer server;
 
-	private static String repositoryId = "test-sparql";
+	private static final String repositoryId = "test-sparql";
 
 	@BeforeClass
 	public static void startServer() throws Exception {
-		server = new SPARQLEmbeddedServer(Arrays.asList(repositoryId));
+		server = new SPARQLEmbeddedServer(List.of(repositoryId));
 		try {
 			server.start();
 		} catch (Exception e) {
