@@ -37,50 +37,50 @@ public class EqualsJoinTest {
 	@Test
 	public void testSimple01() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a"));
-		PlanNode right = new MockInputPlanNode(Arrays.asList("a"), Arrays.asList("b"));
+		PlanNode left = new MockInputPlanNode(List.of("a"));
+		PlanNode right = new MockInputPlanNode(List.of("a"), List.of("b"));
 
 		EqualsJoin equalsJoin = new EqualsJoin(left, right, false);
 
 		List<ValidationTuple> tuples = new MockConsumePlanNode(equalsJoin).asList();
 
-		verify(tuples, Arrays.asList("a"));
+		verify(tuples, List.of("a"));
 
 	}
 
 	@Test
 	public void testSimple02() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a"), Arrays.asList("c"));
-		PlanNode right = new MockInputPlanNode(Arrays.asList("a"), Arrays.asList("b"), Arrays.asList("c"));
+		PlanNode left = new MockInputPlanNode(List.of("a"), List.of("c"));
+		PlanNode right = new MockInputPlanNode(List.of("a"), List.of("b"), List.of("c"));
 
 		EqualsJoin equalsJoin = new EqualsJoin(left, right, false);
 
 		List<ValidationTuple> tuples = new MockConsumePlanNode(equalsJoin).asList();
 
-		verify(tuples, Arrays.asList("a"), Arrays.asList("c"));
+		verify(tuples, List.of("a"), List.of("c"));
 
 	}
 
 	@Test
 	public void testSimple03() {
 
-		PlanNode right = new MockInputPlanNode(Arrays.asList("a"), Arrays.asList("c"));
-		PlanNode left = new MockInputPlanNode(Arrays.asList("a"), Arrays.asList("b"), Arrays.asList("c"));
+		PlanNode right = new MockInputPlanNode(List.of("a"), List.of("c"));
+		PlanNode left = new MockInputPlanNode(List.of("a"), List.of("b"), List.of("c"));
 
 		EqualsJoin equalsJoin = new EqualsJoin(left, right, false);
 
 		List<ValidationTuple> tuples = new MockConsumePlanNode(equalsJoin).asList();
 
-		verify(tuples, Arrays.asList("a"), Arrays.asList("c"));
+		verify(tuples, List.of("a"), List.of("c"));
 
 	}
 
 	@Test
 	public void testSimple04() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("b"), Arrays.asList("c"));
-		PlanNode right = new MockInputPlanNode(Arrays.asList("a"), Arrays.asList("d"), Arrays.asList("e"));
+		PlanNode left = new MockInputPlanNode(List.of("b"), List.of("c"));
+		PlanNode right = new MockInputPlanNode(List.of("a"), List.of("d"), List.of("e"));
 
 		EqualsJoin equalsJoin = new EqualsJoin(left, right, false);
 
@@ -93,14 +93,14 @@ public class EqualsJoinTest {
 	@Test
 	public void testSimple05() {
 
-		PlanNode left = new MockInputPlanNode(Arrays.asList("b"), Arrays.asList("c"));
-		PlanNode right = new MockInputPlanNode(Arrays.asList("a"), Arrays.asList("d"), Arrays.asList("c"));
+		PlanNode left = new MockInputPlanNode(List.of("b"), List.of("c"));
+		PlanNode right = new MockInputPlanNode(List.of("a"), List.of("d"), List.of("c"));
 
 		EqualsJoin equalsJoin = new EqualsJoin(left, right, false);
 
 		List<ValidationTuple> tuples = new MockConsumePlanNode(equalsJoin).asList();
 
-		verify(tuples, Arrays.asList("c"));
+		verify(tuples, List.of("c"));
 
 	}
 
@@ -121,7 +121,7 @@ public class EqualsJoinTest {
 	}
 
 	@SafeVarargs
-	private final void verify(List<ValidationTuple> actual, List<String>... expect) {
+	private void verify(List<ValidationTuple> actual, List<String>... expect) {
 
 //		System.out.println(actual);
 
